--- a/gerenciamento-mercadoria/Views/Mercadoria/AtualizarMercadoria.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/AtualizarMercadoria.cshtml
@@ -1,9 +1,8 @@
 ﻿@model gerenciamento_mercadoria.Models.MercadoriaViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "AtualizarMercadoria";
     Layout = null;
 }
-
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -31,76 +30,48 @@
     </div>
 </nav>
 
-
 <div class="container d-flex flex-column" style="width:90%;margin-top:2%">
-    <div class="d-flex justify-content-end mb-2">
-        <a href="#" class="btn btn-success" data-toggle="modal" data-target="#myModal">Adicionar</a>
-    </div>
-    <table class="table table-striped custom-table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nome</th>
-                <th class="text-nowrap">Número de Registro</th>
-                <th>Fabricante</th>
-                <th>Tipo</th>
-                <th>Descrição</th>
-                <th>Ação</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var mercadoria in ViewBag.Mercadorias)
-            {
-                <tr>
-                    <td>@mercadoria.MercadoriaId</td>
-                    <td>@mercadoria.Nome</td>
-                    <td>@mercadoria.NumeroRegistro</td>
-                    <td>@mercadoria.Fabricante</td>
-                    <td>@mercadoria.NomeTipo</td>
-                    <td>@mercadoria.Descricao</td>
-                    <td>
-                        @Html.ActionLink("Atualizar", "AtualizarMercadoria", new { id = mercadoria.MercadoriaId }, new { @class = "btn btn-success" })
-                    </td>
-                    <td><button class="btn btn-danger">Excluir</button></td>
-                </tr>
-            }
-        </tbody>
-    </table>
-
     <div class="modal fade" id="myModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h3 class="modal-title">Mercadoria</h3>
-                    <a href="#" class="close" data-dismiss="modal">&times;</a>
+                    <a href="#" class="close" data-dismiss="modal" onclick="redirectToIndex()">&times;</a>
                 </div>
                 <div class="modal-body">
                     <form id="myForm">
 
-                        @Html.TextBoxFor(model => model.Nome, new { @class = "form-control", @placeholder = "Nome" })
+                        @Html.TextBoxFor(model => model.Nome, new { @class = "form-control"})
 
-                        @Html.TextBoxFor(model => model.NumeroRegistro, new { @class = "form-control", @placeholder = "Número de Registro" })
+                        @Html.TextBoxFor(model => model.NumeroRegistro, new { @class = "form-control"})
 
-                        @Html.TextBoxFor(model => model.Fabricante, new { @class = "form-control", @placeholder = "Fabricante" })
+                        @Html.TextBoxFor(model => model.Fabricante, new { @class = "form-control"})
 
                         @Html.DropDownListFor(model => model.TipoId, ViewBag.TipoList as SelectList, "Tipo de Mercadoria", new { @class = "form-control" })
 
-                        @Html.TextAreaFor(model => model.Descricao, new { @class = "form-control", @placeholder = "Descrição" })
+                        @Html.TextAreaFor(model => model.Descricao, new { @class = "form-control"})
 
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
-                    <input type="reset" value="Submit" class="btn btn-success" id="btnSubimit" />
+                    <a href="#" class="btn btn-default" data-dismiss="modal" onclick="redirectToIndex()">Cancel</a>
+                    <input type="reset" value="Atualizar" class="btn btn-success" id="btnSubimit" />
                 </div>
             </div>
         </div>
     </div>
-
 </div>
 
 <script>
-    var url = window.location.href;
+    $(document).ready(function () {
+        $("#myModal").modal("show");
+    })
+
+    function redirectToIndex() {
+            window.location.href = '@Url.Action("Index", "Mercadoria")';
+    }
+
+    var url = '@Url.Action("AtualizarMercadoria", "Mercadoria", new { id = Model.MercadoriaId })';
 
     $(document).ready(function () {
         $("#btnSubimit").click(function () {
@@ -112,7 +83,8 @@
                 data: myFormData,
                 success: function () {
                     $('#myForm').trigger("reset");
-                    location.reload();
+                    $('#myModal').modal('hide');
+                    window.location.href = '@Url.Action("Index", "Mercadoria")';
                 }
             })
         })
