--- a/gerenciamento-mercadoria/Views/Mercadoria/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/Index.cshtml
@@ -93,7 +93,7 @@
                 </div>
                 <div class="modal-footer">
                     <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
-                    <input type="reset" value="Submit" class="btn btn-success" id="btnSubimit" />
+                    <input type="reset" value="Adicionar" class="btn btn-success" id="btnSubimit" />
                 </div>
             </div>
         </div>
