--- a/gerenciamento-mercadoria/Views/Home/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
             <ul class="navbar-nav flex-grow-1">
                 <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Mercadoria", "Index", "Mercadoria", new { area = "" }, new { @class = "nav-link" })</li>
+                <li>@Html.ActionLink("Entrada", "Index", "Entrada", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
         </div>
     </div>
