Implementa funcionalidade de cadastrar entradas no sistema

--- a/gerenciamento-mercadoria/Views/Home/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
                 <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Mercadoria", "Index", "Mercadoria", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Entrada", "Index", "Entrada", new { area = "" }, new { @class = "nav-link" })</li>
+                <li>@Html.ActionLink("Saída", "Index", "Saida", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
         </div>
     </div>
