--- a/gerenciamento-mercadoria/Views/Mercadoria/AtualizarMercadoria.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/AtualizarMercadoria.cshtml
@@ -25,6 +25,7 @@
             <ul class="navbar-nav flex-grow-1">
                 <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Mercadoria", "Index", "Mercadoria", new { area = "" }, new { @class = "nav-link" })</li>
+                <li>@Html.ActionLink("Saída", "Index", "Saida", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
         </div>
     </div>
