--- a/gerenciamento-mercadoria/Views/Saida/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Saida/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model gerenciamento_mercadoria.Models.EntradaViewModel
+﻿@model gerenciamento_mercadoria.Models.SaidaViewModel
 
 @{
-    ViewBag.Title = "AtualizarEntrada";
+    ViewBag.Title = "Index";
     Layout = null;
 }
 
@@ -34,46 +34,75 @@
 </nav>
 
 <div class="container d-flex flex-column" style="width:90%;margin-top:2%">
+    <div class="d-flex justify-content-end mb-2">
+        <a href="#" class="btn btn-success" data-toggle="modal" data-target="#myModal">Adicionar</a>
+    </div>
+    <table class="table table-striped custom-table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Mercadoria</th>
+                <th>Quantidade</th>
+                <th class="text-nowrap">Data e Hora do Cadastro</th>
+                <th>Local</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var saida in ViewBag.Saidas)
+            {
+                <tr>
+                    <td>@saida.SaidaId</td>
+                    <td>@saida.Nome</td>
+                    <td>@saida.Quantidade</td>
+                    <td>@saida.Data</td>
+                    <td>@saida.Local</td>
+                    <td>
+                        @Html.ActionLink("Atualizar", "AtualizarSaida", new { id = saida.SaidaId }, new { @class = "btn btn-success" })
+                    </td>
+                    <td>
+                        @Html.ActionLink("Excluir", "RemoverSaida", new { id = saida.SaidaId }, new { @class = "btn btn-danger" })
+                    </td>
+                    <td>
+                        @Html.ActionLink("Visualizar", "VisualizarSaida", new { id = saida.SaidaId }, new { @class = "btn btn-primary" })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
     <div class="modal fade" id="myModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title">Mercadoria</h3>
-                    <a href="#" class="close" data-dismiss="modal" onclick="redirectToIndex()">&times;</a>
+                    <h3 class="modal-title">Saida</h3>
+                    <a href="#" class="close" data-dismiss="modal">&times;</a>
                 </div>
                 <div class="modal-body">
                     <form id="myForm">
 
-                        @Html.TextBoxFor(model => model.Quantidade, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Quantidade, new { @class = "form-control", @placeholder = "Quantidade" })
 
-                        @Html.TextBoxFor(model => model.Data, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Data, new { @class = "form-control", @placeholder = "Data e Hora no Formato dd/mm/yyyy h:m:s" })
 
-                        @Html.TextBoxFor(model => model.Local, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Local, new { @class = "form-control", @placeholder = "Local" })
 
                         @Html.DropDownListFor(model => model.MercadoriaId, ViewBag.MercadoriaList as SelectList, "Selecione uma Mercadoria", new { @class = "form-control" })
-
 
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <a href="#" class="btn btn-default" data-dismiss="modal" onclick="redirectToIndex()">Cancel</a>
-                    <input type="reset" value="Atualizar" class="btn btn-success" id="btnSubimit" />
+                    <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
+                    <input type="reset" value="Adicionar" class="btn btn-success" id="btnSubimit" />
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 
 <script>
-    $(document).ready(function () {
-        $("#myModal").modal("show");
-    })
-
-    function redirectToIndex() {
-            window.location.href = '@Url.Action("Index", "Entrada")';
-    }
-
-    var url = '@Url.Action("AtualizarEntrada", "Entrada", new { id = Model.EntradaId })';
+    var url = window.location.href;
 
     $(document).ready(function () {
         $("#btnSubimit").click(function () {
@@ -85,8 +114,7 @@
                 data: myFormData,
                 success: function () {
                     $('#myForm').trigger("reset");
-                    $('#myModal').modal('hide');
-                    window.location.href = '@Url.Action("Index", "Entrada")';
+                    location.reload();
                 }
             })
         })
