--- a/gerenciamento-mercadoria/Views/Mercadoria/VisualizarEntradaSaida.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/VisualizarEntradaSaida.cshtml
@@ -32,5 +32,63 @@
     </div>
 </nav>
 
-@Html.ActionLink("Voltar", "Index", "Mercadoria", new { area = ""}, new {@class = "btn btn-primary m-2"})
+@Html.ActionLink("Voltar", "Index", "Mercadoria", new { area = "" }, new { @class = "btn btn-primary m-2" })
 
+<div class="row">
+    <div class="col-md-6">
+        <h5>Gráfico Entradas e Saidas da Mercadoria </h5>
+        <div>
+            <canvas id="barChart"></canvas>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script type="text/javascript">
+    $(window).ready(function () {
+        $.ajax({
+            url: '/Mercadoria/ObterEntradasSaidas',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                createBarChart(data);
+            },
+            error: function (xhr, textStatus, errorThrown) {
+                console.log('Error: ' + errorThrown);
+            }
+        });
+
+        function createBarChart(data) {
+            var ctx = document.getElementById('barChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: data.labels,
+                    datasets: [{
+                        label: 'Entrada',
+                        data: data.input,
+                        backgroundColor: 'rgba(54, 162, 235, 0.5)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }, {
+                        label: 'Saída',
+                        data: data.output,
+                        backgroundColor: 'rgba(255, 99, 132, 0.5)',
+                        borderColor: 'rgba(255, 99, 132, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true
+                            }
+                        }]
+                    }
+                }
+            });
+        }
+    });
+</script>
