--- a/gerenciamento-mercadoria/Views/Mercadoria/VisualizarEntradaSaida.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/VisualizarEntradaSaida.cshtml
@@ -36,7 +36,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h5>Gráfico Entradas e Saidas da Mercadoria </h5>
+        <h5>Gráfico de Entradas e Saidas da Mercadoria </h5>
         <div>
             <canvas id="barChart"></canvas>
         </div>
@@ -46,9 +46,13 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="text/javascript">
+    var url = window.location.href;
+    var parts = url.split('/');
+    var id = parts[parts.length - 1];
+
     $(window).ready(function () {
         $.ajax({
-            url: '/Mercadoria/ObterEntradasSaidas',
+            url: '/Mercadoria/ObterEntradasSaidas/' + id,
             type: 'GET',
             dataType: 'json',
             success: function (data) {
@@ -67,13 +71,13 @@
                     labels: data.labels,
                     datasets: [{
                         label: 'Entrada',
-                        data: data.input,
+                        data: data.entradas,
                         backgroundColor: 'rgba(54, 162, 235, 0.5)',
                         borderColor: 'rgba(54, 162, 235, 1)',
                         borderWidth: 1
                     }, {
                         label: 'Saída',
-                        data: data.output,
+                        data: data.saidas,
                         backgroundColor: 'rgba(255, 99, 132, 0.5)',
                         borderColor: 'rgba(255, 99, 132, 1)',
                         borderWidth: 1
