Cria página com dropdownlist para gerar relatório

--- a/gerenciamento-mercadoria/Views/Mercadoria/AtualizarMercadoria.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/AtualizarMercadoria.cshtml
@@ -26,6 +26,7 @@
                 <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Mercadoria", "Index", "Mercadoria", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Saída", "Index", "Saida", new { area = "" }, new { @class = "nav-link" })</li>
+                <li>@Html.ActionLink("Relatorio", "Index", "Relatorio", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
         </div>
     </div>
