--- a/gerenciamento-mercadoria/Views/Entrada/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Entrada/Index.cshtml
@@ -28,6 +28,7 @@
                 <li>@Html.ActionLink("Mercadoria", "Index", "Mercadoria", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Entrada", "Index", "Entrada", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Saída", "Index", "Saida", new { area = "" }, new { @class = "nav-link" })</li>
+                <li>@Html.ActionLink("Relatorio", "Index", "Relatorio", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
         </div>
     </div>
