--- a/gerenciamento-mercadoria/Views/Mercadoria/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Mercadoria/Index.cshtml
@@ -4,6 +4,11 @@
     Layout = null;
 }
 
+<style>
+    .error {
+        color: red;
+    }
+</style>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -68,7 +73,7 @@
                         @Html.ActionLink("Excluir", "RemoverMercadoria", new { id = mercadoria.MercadoriaId }, new { @class = "btn btn-danger" })
                     </td>
                     <td>
-                        @Html.ActionLink("Visualizar", "VisualizarEntradaSaida", new { id = mercadoria.MercadoriaId}, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Visualizar", "VisualizarEntradaSaida", new { id = mercadoria.MercadoriaId }, new { @class = "btn btn-primary" })
                     </td>
                 </tr>
             }
@@ -85,15 +90,20 @@
                 <div class="modal-body">
                     <form id="myForm">
 
-                        @Html.TextBoxFor(model => model.Nome, new { @class = "form-control", @placeholder = "Nome" })
+                        @Html.TextBoxFor(model => model.Nome, new { @class = "form-control", placeholder = "Nome" })
+                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "error" })
 
                         @Html.TextBoxFor(model => model.NumeroRegistro, new { @class = "form-control", @placeholder = "Número de Registro" })
+                        @Html.ValidationMessageFor(model => model.NumeroRegistro, "", new { @class = "error" })
 
                         @Html.TextBoxFor(model => model.Fabricante, new { @class = "form-control", @placeholder = "Fabricante" })
+                        @Html.ValidationMessageFor(model => model.Fabricante, "", new { @class = "error" })
 
                         @Html.DropDownListFor(model => model.TipoId, ViewBag.TipoList as SelectList, "Tipo de Mercadoria", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.TipoId, "", new { @class = "error" })
 
                         @Html.TextAreaFor(model => model.Descricao, new { @class = "form-control", @placeholder = "Descrição" })
+                        @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "error" })
 
                     </form>
                 </div>
@@ -107,12 +117,20 @@
 
 </div>
 
+<script src="~/Scripts/jquery.validate.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <script>
     var url = window.location.href;
 
     $(document).ready(function () {
         $("#btnSubimit").click(function () {
             var myFormData = $("#myForm").serialize();
+
+            if (!$("#myForm").valid()) {
+
+                return false;
+            }
 
             $.ajax({
                 type: "POST",
