--- a/gerenciamento-mercadoria/Views/Saida/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Saida/Index.cshtml
@@ -5,6 +5,12 @@
     Layout = null;
 }
 
+<style>
+    .error {
+        color: red;
+    }
+</style>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
@@ -80,12 +86,16 @@
                     <form id="myForm">
 
                         @Html.TextBoxFor(model => model.Quantidade, new { @class = "form-control", @placeholder = "Quantidade" })
+                        @Html.ValidationMessageFor(model => model.Quantidade, "", new { @class = "error" })
 
                         @Html.TextBoxFor(model => model.Data, new { @class = "form-control", @placeholder = "Data e Hora no Formato dd/mm/yyyy h:m:s" })
+                        @Html.ValidationMessageFor(model => model.Data, "", new { @class = "error" })
 
                         @Html.TextBoxFor(model => model.Local, new { @class = "form-control", @placeholder = "Local" })
+                        @Html.ValidationMessageFor(model => model.Local, "", new { @class = "error" })
 
                         @Html.DropDownListFor(model => model.MercadoriaId, ViewBag.MercadoriaList as SelectList, "Selecione uma Mercadoria", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.MercadoriaId, "", new { @class = "error" })
 
                     </form>
                 </div>
@@ -99,12 +109,40 @@
 
 </div>
 
+<script src="~/Scripts/jquery.validate.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+<script>
+    jQuery(function ($) {
+        $.validator.addMethod('date',
+            function (value, element) {
+                if (this.optional(element)) {
+                    return true;
+                }
+                var ok = true;
+                try {
+                    $.datepicker.parseDate('dd/mm/yy', value);
+                }
+                catch (err) {
+                    ok = false;
+                }
+                return ok;
+            });
+    });
+</script>
+
+
 <script>
     var url = window.location.href;
 
     $(document).ready(function () {
         $("#btnSubimit").click(function () {
             var myFormData = $("#myForm").serialize();
+
+            if (!$("#myForm").valid()) {
+
+                return false;
+            }
 
             $.ajax({
                 type: "POST",
