--- a/gerenciamento-mercadoria/Views/Saida/Index.cshtml
+++ b/gerenciamento-mercadoria/Views/Saida/Index.cshtml
@@ -88,7 +88,7 @@
                         @Html.TextBoxFor(model => model.Quantidade, new { @class = "form-control", @placeholder = "Quantidade" })
                         @Html.ValidationMessageFor(model => model.Quantidade, "", new { @class = "error" })
 
-                        @Html.TextBoxFor(model => model.Data, new { @class = "form-control", @placeholder = "Data e Hora no Formato dd/mm/yyyy h:m:s" })
+                        @Html.TextBoxFor(model => model.Data, new { @class = "form-control", @placeholder = "Data e Hora no Formato dd/mm/yyyy h:m" })
                         @Html.ValidationMessageFor(model => model.Data, "", new { @class = "error" })
 
                         @Html.TextBoxFor(model => model.Local, new { @class = "form-control", @placeholder = "Local" })
@@ -109,27 +109,9 @@
 
 </div>
 
-<script src="~/Scripts/jquery.validate.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-
-<script>
-    jQuery(function ($) {
-        $.validator.addMethod('date',
-            function (value, element) {
-                if (this.optional(element)) {
-                    return true;
-                }
-                var ok = true;
-                try {
-                    $.datepicker.parseDate('dd/mm/yy', value);
-                }
-                catch (err) {
-                    ok = false;
-                }
-                return ok;
-            });
-    });
-</script>
+<!-- Scripts de validação -->
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
 
 <script>
